--- a/src/main/resources/templates/front/adjust.html
+++ b/src/main/resources/templates/front/adjust.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 修改密码')"></head>
-<body style="overflow:hidden;">
-<div class="layui-container index-body">
-    <div class="layui-row layui-form">
-        <div class="layui-form-item">
-            <label class="layui-form-label">当前密码</label>
-            <div class="layui-input-block">
-                <input type="password" name="oldPassword" lay-verify="required" placeholder="6到16个字符" class="layui-input"/>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">新密码</label>
-            <div class="layui-input-block">
-                <input type="password" id="npw" name="password" lay-verify="required" placeholder="6到16个字符" class="layui-input"/>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">确认新密码</label>
-            <div class="layui-input-block">
-                <input type="password" id="cpw" name="newPassword" lay-verify="repass" placeholder="6到16个字符" class="layui-input"/>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-input-block">
-                <button class="layui-btn layui-bg-purple" lay-submit lay-filter="lay_submit">确认修改</button>
-            </div>
+<body>
+<form class="layui-form" style="margin: 10px 10px 0 0;">
+    <div class="layui-form-item">
+        <label class="layui-form-label">当前密码</label>
+        <div class="layui-input-block">
+            <input type="password" name="oldPassword" lay-verify="required" placeholder="6到16个字符" class="layui-input"/>
         </div>
     </div>
-</div>
-<!-- 底部信息 -->
+    <div class="layui-form-item">
+        <label class="layui-form-label">新密码</label>
+        <div class="layui-input-block">
+            <input type="password" id="npw" name="password" lay-verify="required" placeholder="6到16个字符" class="layui-input"/>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">确认新密码</label>
+        <div class="layui-input-block">
+            <input type="password" id="cpw" name="newPassword" lay-verify="repass" placeholder="6到16个字符" class="layui-input"/>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <div class="layui-input-block">
+            <button class="layui-btn layui-bg-purple" lay-submit lay-filter="lay_submit">确认修改</button>
+        </div>
+    </div>
+</form>
+</body>
 <script>
     layui.use(['jquery', 'form'], function ($, form) {
         form.verify({
@@ -56,5 +54,4 @@
         });
     });
 </script>
-</body>
 </html>
